--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "html2pdf.js": "^0.10.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
+    "react-spinners": "^0.17.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
