--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.10.0",
     "gapi-script": "^1.2.0",
     "html2pdf.js": "^0.10.3",
+    "lucide-react": "^0.532.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
+    "sweetalert2": "^11.22.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
